--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 
 <section class="hero">
-    <img src="images/mosque.jpg" alt="Mosque" class="hero-img">
+    <img src="images/mosque.jpg" alt="mosque" class="hero-img">
     <h2>Learn, Reflect, and Grow in Faith</h2>
     <p>Explore Quran, Hadith, and Islamic knowledge with a modern design.</p>
     <button onclick="showWelcome()">Explore Now</button>
@@ -27,13 +27,13 @@
 
 <section class="cards">
     <div class="card">
-        <img src="images/quran.jpg" alt="Quran">
+        <img src="images/quran.jpg" alt="quran">
         <h3>Quranic Verses</h3>
         <p>Read the Quran with easy navigation and explanations.</p>
         <a href="quran.html" class="card-btn">Read More</a>
     </div>
     <div class="card">
-        <img src="images/islamic_art.jpg" alt="Islamic Art">
+        <img src="images/islamic_art.jpg" alt="islamic_art">
         <h3>Hadith & Articles</h3>
         <p>Learn authentic Hadiths and Islamic articles for daily life.</p>
         <a href="articles.html" class="card-btn">Read More</a>
@@ -48,3 +48,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
